--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -79,13 +79,23 @@
   font-weight: 500;
 }
 
+@media screen and (min-width: 448px) {
+  .secContainer {
+    grid-template-columns: repeat(2, 1fr);
+    text-align: center;
+    align-items: flex-start;
+  }
+  .secContainer .footerLinks {
+    justify-content: center;
+  }
+}
 @media screen and (min-width: 640px) {
-  .footer .secContainer {
+  .secContainer {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 @media screen and (min-width: 900px) {
-  .footer .secContainer {
+  .secContainer {
     padding: 2rem;
   }
 }/*# sourceMappingURL=footer.css.map */
