--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -96,18 +96,26 @@
 }
 
 //media Queries=====================>
-@media screen and (min-width: 640px) {
-    .footer{
-        .secContainer{
-            grid-template-columns: repeat(3,1fr);
+@media screen and (min-width: 448px) {
+    .secContainer{
+        grid-template-columns: repeat(2,1fr);
+        text-align: center;
+        align-items: flex-start;
+
+        .footerLinks{
+            justify-content: center;
         }
     }
 }
 
+@media screen and (min-width: 640px) {
+    .secContainer{
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+
 @media screen and (min-width: 900px) {
-    .footer{
-        .secContainer{
-            padding: 2rem;
-        }
+    .secContainer{
+        padding: 2rem;
     }
 }
