--- a/src/Components/Main/main.scss
+++ b/src/Components/Main/main.scss
@@ -230,6 +230,17 @@
     }
 }
 
+///////////////////////
+@media screen and (min-width: 884px) {
+    .main{
+        .mainContent{
+            grid-template-columns: repeat(2,1fr);
+        }
+    }
+}
+
+
+
 @media screen and (min-width: 1024px) {
     .main{
         padding-top: 10rem;
