--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -25,7 +25,7 @@
         position: absolute;
         height: 100%;
         width: 100%;
-        background: rgb(140, 175, 205);
+        //background: rgb(160, 232, 6);
         top: 0;
         bottom: 0;
         mix-blend-mode: hard-light;
