--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -47,7 +47,7 @@
 }
 .home .secContainer .homeText .title {
   font-size: 2rem;
-  color: black;
+  color: white;
   position: relative;
   line-height: 2.5rem;
 }
