--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -48,7 +48,7 @@
 
             .title {
                 font-size: 2.0rem;
-                color: black;
+                color: white;
                 position: relative;
                 line-height: 2.5rem;
 
