--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -30,7 +30,7 @@
   /* This style is for the "BONVOYAGE" */
 }
 .navBarSection .header .logoDiv .logo {
-  color: black;
+  color: white;
   font-weight: 500;
   cursor: pointer;
   align-items: center;
@@ -125,7 +125,7 @@
   color: var(--blackColor);
 }
 .navBarSection .activeHeader {
-  background: var(--greyText);
+  background: rgb(114, 111, 111);
   box-shadow: 0 2px 8px rgba(66, 53, 53, 0.45);
 }
 
@@ -143,7 +143,7 @@
     flex-direction: row;
   }
   .navBarSection .header .navBar .navLists .navItem .navLink {
-    color: black;
+    color: white;
     padding: 0 0.45rem;
     font-weight: 600;
     font-size: 0.9rem;
