--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -79,6 +79,8 @@
 
                 a{
                     color: var(--textColor);
+                    cursor: pointer;
+                    font-weight: 600;
 
                     &:hover{
                         color: var(--secondaryColor);
