--- a/src/Components/Main/main.css
+++ b/src/Components/Main/main.css
@@ -16,20 +16,22 @@
 .main {
   padding-top: 15rem;
 }
-.main .secContainer secHeader {
+.main .secContainer .secHeader {
   flex-direction: column;
   align-items: flex-start;
   gap: 1;
 }
-.main .secContainer secHeader .textDiv .secTitle {
+.main .secContainer .secHeader .textDiv .secTitle {
   color: var(--blackColor);
   line-height: 1.5rem;
-  padding-bottom: 0.5rem;
+  padding-bottom: 1rem;
+  text-align: center;
 }
-.main .secContainer secHeader .textDiv p {
+.main .secContainer .secHeader .textDiv p {
   font-size: 13px;
-  color: var(--textColor);
+  color: var(--blackColor);
   font-weight: 500;
+  text-align: center;
 }
 .main .secContainer .iconsDiv {
   gap: 0.5rem;
@@ -201,7 +203,7 @@
     padding-top: 10rem;
   }
   .main .secContainer .secHeader .textDiv .secTitle {
-    font-size: 2.2rem;
+    font-size: 2.05rem;
   }
   .main .secContainer .secHeader .textDiv p {
     font-size: 15px;
