--- a/src/Components/Main/main.scss
+++ b/src/Components/Main/main.scss
@@ -18,7 +18,7 @@
     padding-top: 15rem;
 
     .secContainer{
-        secHeader{
+        .secHeader{
             flex-direction: column;
             align-items: flex-start;
             gap: 1;
@@ -27,13 +27,15 @@
                 .secTitle{
                     color: var(--blackColor);
                     line-height: 1.5rem;
-                    padding-bottom: .5rem;
+                    padding-bottom: 1rem;
+                    text-align: center;
                 }
 
                 p{
                     font-size: 13px;
-                    color: var(--textColor);
+                    color: var(--blackColor);
                     font-weight: 500;
+                    text-align: center;
                 }
             }
         }
@@ -249,7 +251,7 @@
             .secHeader{
                 .textDiv{
                     .secTitle{
-                        font-size: 2.2rem;
+                        font-size: 2.05rem;
                     }
 
                     p{
